--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
+                <version>2.11</version>
             </plugin>
         </plugins>
     </build>
